--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "framer-motion": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone-uploader": "^2.11.0",
     "react-image-file-resizer": "^0.3.6",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-infinite-scroller": "^1.2.4",
     "react-preload-image": "^1.0.7",
     "react-redux": "^7.2.1",
